GalleryBox gap fix

--- a/src/components/GalleryBox/GalleryBox.css
+++ b/src/components/GalleryBox/GalleryBox.css
@@ -5,6 +5,7 @@
     gap: 3vh;
     /* height: 70vh; */
     margin-top: 15vh;
+    margin-bottom: 8vh;
 }
 
 .gallery-box img {
